--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 				<div class="col-md-6 col-lg-5 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
-						<!-- <div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/bg_1.png);">
-						</div> -->
+						<div class="img d-flex align-self-stretch align-items-center"
+							style="background-image:url(images/me.jpg);">
+						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
@@ -263,7 +263,7 @@
 		<div class="container">
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
-					<h1 class="big big-2">ProjeK</h1>
+					<h1 class="big big-2">Projek</h1>
 					<h2 class="mb-4">Projek Saya</h2>
 					<p>Ini beberapa gambar dari projek yang sudah saya kerjakan : </p>
 				</div>
@@ -271,41 +271,32 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/project-4.jpg);">
+						style="background-image: url(images/projek-1.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="#">E-Kantin Musamus</a></h3>
+							<span>Web Developer</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/project-5.jpg);">
+						style="background-image: url(images/projek-4.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="#">E-Kantin Musamus</a></h3>
+							<span>Web Developer</span>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-md-8">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/project-1.jpg);">
+						style="background-image: url(images/projek-3.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/project-6.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="#">Sistem Informasi Donor Darah</a></h3>
+							<span>App Developer</span>
 						</div>
 					</div>
 				</div>
@@ -313,21 +304,11 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/project-2.jpg);">
+								style="background-image: url(images/projek-5.png);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-									<span>Web Design</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/project-3.jpg);">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-									<span>Web Design</span>
+									<h3><a href="#">E-Kantin Musamus</a></h3>
+									<span>Web Developer</span>
 								</div>
 							</div>
 						</div>
@@ -415,7 +396,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Website</h3>
-						<p><a href="#">yoursite.com</a></p>
+						<p><a href="#">https://xxito.github.io/</a></p>
 					</div>
 				</div>
 			</div>
@@ -444,7 +425,7 @@
 				</div>
 
 				<div class="col-md-6 d-flex">
-					<div class="img" style="background-image: url(images/about.jpg);"></div>
+					<div class="img" style="background-image: url(images/me.jpg);"></div>
 				</div>
 			</div>
 		</div>
@@ -460,7 +441,8 @@
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
 							there live the blind texts.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="#"><span class="icon-github"></span></a></li>
+							<li class="ftco-animate"><a href="https://github.com/xxIto?tab=repositories"><span
+										class="icon-github"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 						</ul>
@@ -470,11 +452,11 @@
 					<div class="ftco-footer-widget mb-4 ml-md-4">
 						<h2 class="ftco-heading-2">Links</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Beranda</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Tentang Saya</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Melayani</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projek</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Kontak</a></li>
 						</ul>
 					</div>
 				</div>
@@ -482,25 +464,23 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Services</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Pembuatan Website</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Pembuatan Aplikasi
+									Android</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>UI/UX Design With Figma</a>
+							</li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Have a Questions?</h2>
+						<h2 class="ftco-heading-2">Punya pertanyaan ?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
-										View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 821 9882
+											4726</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
-											class="text">info@yourdomain.com</span></a></li>
+											class="text">christofernero@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -513,7 +493,8 @@
 						Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
 						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
-							href="https://colorlib.com" target="_blank">Colorlib</a>
+							href="https://colorlib.com" target="_blank">Colorlib</a> and edited by <a
+							href="#">XVCODE</a>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</p>
 				</div>
