--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Website</h3>
-						<p><a href="#">yoursite.com</a></p>
+						<p><a href="#">https://xxito.github.io/</a></p>
 					</div>
 				</div>
 			</div>
